--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   firebase_auth: ^4.16.0
   fluttertoast: ^8.2.8
+  persistent_bottom_nav_bar: ^6.2.1
   
 
 dev_dependencies:
