--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   firebase_auth: ^4.16.0
   fluttertoast: ^8.2.8
   persistent_bottom_nav_bar: ^6.2.1
+  cloud_firestore: ^4.14.0
+  carousel_slider: ^5.0.0
+  cached_network_image: ^3.4.1
   
 
 dev_dependencies:
