--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
+  intl: ^0.19.0
   
 
 dev_dependencies:
