--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,12 @@ dependencies:
   firebase_auth: ^4.16.0
   fluttertoast: ^8.2.8
   persistent_bottom_nav_bar: ^6.2.1
-  cloud_firestore: ^4.14.0
+  cloud_firestore: ^4.17.5
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
   intl: ^0.19.0
+  image_picker: ^1.1.2
+  firebase_storage: ^11.6.5
   
 
 dev_dependencies:
