--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.1.2
   firebase_storage: ^11.6.5
+  google_maps_flutter: ^2.9.0
+  geolocator: ^13.0.1
+  flutter_stripe: ^11.0.0
+  dio: ^5.7.0
   
 
 dev_dependencies:
